--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <!-- End Intro Scroll Down -->
                 <!-- Hero Slider Section -->
-                <div class="container" id="slider-container">
+                <div class="container">
                     <div class="flexslider fullscreen-carousel hero-slider-1 parallax parallax-section1">
                         <ul class="slides">
                             <li>
