--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             
             <!-- CONTENT --------------------------------------------------------------------------------->
             <!-- Intro Section -->
-            <section class="hero">
+            <section class="hero" id="hero-slider-top">
                 <!-- Intro Scroll Down -->
                 <div class="intro-scroll-down">
                     <a class="scroll-down" href="#index">
@@ -74,7 +74,7 @@
                 <!-- End Intro Scroll Down -->
                 <!-- Hero Slider Section -->
                 <div class="container">
-                    <div class="flexslider fullscreen-carousel hero-slider-1 parallax parallax-section1">
+                    <div class="flexslider fullscreen-carousel hero-slider-1 parallax">
                         <ul class="slides">
                             <li>
                                 <div class="hero-bg-slide" style="background-image: url('http://cdn.companybe.com/HummingBirdInn/banners/banner_ojai_valley1.jpg');"></div>
