--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a href="#about">About</a>
         </div> -->
     <div class="Navbar_Wrapper">
-        <!-- <img src="hb-logo.png" alt="logo"> -->
+        <img src="hb-logo.png" id="Navbar_Image" alt="logo">
         <div class="Navbar">
             <div class="Navbar__Link Navbar__Link-toggle">
                 <i class="fas fa-bars"></i>
