--- a/index.html
+++ b/index.html
@@ -58,34 +58,36 @@
             <a href="#about">About</a>
         </div> -->
     <div class="Navbar_Wrapper">
-        <img src="hb-logo.png" id="Navbar_Image" alt="logo">
+        <img src="hb-logo.png" class="Navbar_Image" alt="logo">
         <div class="Navbar">
             <div class="Navbar__Link Navbar__Link-toggle">
                 <i class="fas fa-bars"></i>
             </div>
             <nav class="Navbar__Items">
                 <div class="Navbar__Link">
-                    Rooms
+                    <a href="http://HummingBirdInn.cobedev.com/-cid-1">Rooms</a>
                 </div>
                 <div class="Navbar__Link">
-                    Events
+                    <a href="http://HummingBirdInn.cobedev.com/events.cfm">Events</a>
                 </div>
                 <div class="Navbar__Link">
-                    History
+                    <a href="http://HummingBirdInn.cobedev.com/history.cfm">History</a>
                 </div>
                 <div class="Navbar__Link">
-                    Gallery
+                    <a href="http://HummingBirdInn.cobedev.com/gallery.cfm">Gallery</a>
+
                 </div>
                 <div class="Navbar__Link">
-                    Contact
+                    <a href="http://HummingBirdInn.cobedev.com/contact2.cfm">Contact</a>
+
                 </div>
                 <div class="Navbar__Link">
-                    Reservations
+                    <a href="http://HummingBirdInn.cobedev.com/reservations.cfm">Reservations</a>
                 </div>
             </nav>
             <nav class="Navbar__Items Navbar__Items--right">
-                <div class="Navbar__Link">
-                    720.320.9346
+                <div class="Navbar__Link phone">
+                    <a href="tel:760.320.9346">760.320.9346</a>
                 </div>
             </nav>
         </div>
