testing responsive nav

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             </a>
         </div>
     </div>
+    <div class="Navbar_Outer">
     <div class="Navbar_Wrapper">
         <img src="hb-logo.png" class="Navbar_Image" alt="logo">
         <div class="Navbar">
@@ -91,6 +92,7 @@
             </nav>
         </div>
     </div>
+</div>
     <!-- Site Wrapper -->
     <div class="wrapper">
 
@@ -101,7 +103,7 @@
 
             <!-- End Intro Scroll Down -->
             <!-- Hero Slider Section -->
-            <div class="container">
+            <div class="container" id="slider-container">
                 <div class="flexslider fullscreen-carousel hero-slider-1 parallax">
                     <ul class="slides">
                         <li>
